--- a/landingpage1/style.css
+++ b/landingpage1/style.css
@@ -11,6 +11,21 @@ body {
   height: 100%;
   width: 100%;
 }
+#loader {
+  height: 100vh;
+  width: 100%;
+  background-color: #dadada;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+}
+#loader h1 {
+  font-size: 80px;
+  color: black;
+  font-weight: 500;
+}
 #main {
   height: 100%;
   width: 100%;
